добавление JPA, hsql, java 21 + рефакторинг